--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -11,6 +11,14 @@
     box-shadow: 0.5rem 0.5rem 1rem rgba($color-black, 0.3);
     transition: all 0.15s ease-in-out;
 
+    &:hover {
+        transform: translateY(-0.25rem);
+        box-shadow: 0.6rem 0.6rem 1.2rem rgba($color-black, 0.5);
+    }
+    &:active {
+        transform: translateY(-0.1rem);
+        box-shadow: 0.5rem 0.5rem 1rem rgba($color-black, 0.5);
+    }
     &--ok {
         background-color: $color-green;
     }
@@ -23,12 +31,13 @@
         padding: $size-xsmall;
         height: 4rem;
     }
-    &:hover {
-        transform: translateY(-0.25rem);
-        box-shadow: 0.6rem 0.6rem 1.2rem rgba($color-black, 0.5);
-    }
-    &:active {
-        transform: translateY(-0.1rem);
-        box-shadow: 0.5rem 0.5rem 1rem rgba($color-black, 0.5);
+    &--invalid {
+        background-color: $color-grey-2;
+
+        &:hover {
+            cursor: not-allowed;
+            transform: translateY(0);
+            box-shadow: 0.5rem 0.5rem 1rem rgba($color-black, 0.3);
+        }
     }
 }
