--- a/src/css/components/_move-item.scss
+++ b/src/css/components/_move-item.scss
@@ -9,12 +9,13 @@
     text-align: center;
     box-shadow: 0 1rem 2rem rgba($color-black, 0.5);
 
-    &__close {
-        position: absolute;
-        top: 10px;
-        right: 20px;
-        cursor: pointer;
+    &__bg {
+        position: fixed;
+        height: 100%;
+        width: 100%;
+        background-color: rgba($color-black, 0.7);
     }
+
     &__title {
         font-size: resize($default-font-size, 2.4);
         text-transform: uppercase;
@@ -26,5 +27,4 @@
         border-bottom: 1px solid $color-black;
     }
     @include menu-style($size-small);
-    @include kunai-svg;
 }
