--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -16,6 +16,7 @@
 @import './components/button';
 @import './components/window';
 @import './components/delete-modal';
+@import './components/tooltip';
 
 @import './layout/header';
 @import './layout/footer';
