--- a/src/css/base/_animations.scss
+++ b/src/css/base/_animations.scss
@@ -18,3 +18,12 @@
         opacity: 0;
     }
 }
+
+@keyframes rotate-icon {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
