--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -14,6 +14,9 @@
     &:hover {
         transform: translateY(-0.25rem);
         box-shadow: 0.6rem 0.6rem 1.2rem rgba($color-black, 0.5);
+        svg {
+            animation: rotate-icon infinite 10s linear;
+        }
     }
     &:active {
         transform: translateY(-0.1rem);
@@ -39,5 +42,9 @@
             transform: translateY(0);
             box-shadow: 0.5rem 0.5rem 1rem rgba($color-black, 0.3);
         }
+    }
+    &--animated ~ svg {
+        background-color: red;
+        // animation: rotate-icon infinite 20s linear;
     }
 }
