--- a/src/css/components/_column.scss
+++ b/src/css/components/_column.scss
@@ -47,6 +47,7 @@
         letter-spacing: 1.1px;
         text-align: center;
         font-family: Shojumaru, sans-serif;
+        color: $color-grey-1;
     }
     &__ctrl-box {
         display: flex;
