--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -17,6 +17,8 @@
 @import './components/window';
 @import './components/delete-modal';
 @import './components/tooltip';
+@import './components/landing';
+@import './components/board';
 
 @import './layout/header';
 @import './layout/footer';
