--- a/src/css/style.css
+++ b/src/css/style.css
@@ -105,6 +105,11 @@ body {
   font-family: Shojumaru, sans-serif;
 }
 
+.page {
+  background-image: url("../assets/images/bamboo-2.jpg");
+  background-size: cover;
+}
+
 .app {
   width: 100vw;
   height: 100vh;
@@ -118,59 +123,11 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  z-index: 2;
-}
-
-.app__add {
-  background-color: rgba(74, 84, 77, 0.6);
-  height: 15rem;
-  margin-top: 2rem;
-  padding: 1rem 2rem;
-  border-radius: 0.5rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.app__add-title {
-  color: #fff;
-  font-size: 2.2rem;
-  letter-spacing: 1.1px;
-  margin-top: -1.5rem;
-}
-
-.app__add-btn {
-  display: block;
-  margin: 2rem auto;
-}
-
-.app__add-sticks-plus {
-  width: 2rem;
-  height: 2rem;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-}
-
-.background__bamboo {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  z-index: -2;
+  z-index: 1;
 }
 
 .background__dojo {
   position: absolute;
-  z-index: -1;
   width: 80vw;
   height: 80vh;
   bottom: 2.8rem;
@@ -180,11 +137,10 @@ body {
 }
 
 main {
-  height: 100%;
+  height: 89%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 2rem;
 }
 
 .item {
@@ -679,6 +635,7 @@ main {
 }
 
 .col-wrapper {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1009,6 +966,115 @@ main {
   opacity: 1;
 }
 
+.landing {
+  background: rgba(74, 84, 77, 0.8);
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding-top: 15rem;
+  z-index: 3;
+}
+
+.landing__box {
+  width: 38%;
+  color: #fff;
+  text-align: center;
+}
+
+.landing__title {
+  font-size: 4.6rem;
+  margin-top: 5rem;
+}
+
+.landing__subtitle {
+  font-size: 2.8rem;
+  margin-top: 3rem;
+}
+
+.landing__text {
+  font-size: 1.6rem;
+  margin-top: 3rem;
+  text-align: justify;
+}
+
+.landing__text span {
+  font-size: 2.2rem;
+  color: #032119;
+}
+
+.landing__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 0 auto;
+  margin-top: 5rem;
+  height: 8rem;
+  width: 15rem;
+  background: #cccccc;
+  color: #032119;
+  font-size: 1.6rem;
+  font-family: inherit;
+}
+
+.landing__btn-svg {
+  width: 3.5rem;
+  margin: 1rem;
+}
+
+.landing__image {
+  height: 90%;
+}
+
+.board__add {
+  background-color: rgba(74, 84, 77, 0.6);
+  height: 15rem;
+  width: 25rem;
+  margin-top: 2rem;
+  padding: 1rem 2rem;
+  border-radius: 0.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  z-index: 3;
+}
+
+.board__add-title {
+  color: #fff;
+  font-size: 2.2rem;
+  letter-spacing: 1.1px;
+  margin-top: -1.5rem;
+}
+
+.board__add-btn {
+  display: block;
+  margin: 2rem auto;
+}
+
+.board__add-sticks-plus {
+  width: 2rem;
+  height: 2rem;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
 .header {
   height: 5rem;
   background-color: rgba(74, 84, 77, 0.8);
@@ -1053,6 +1119,11 @@ main {
   margin: 0 5rem;
   font-size: 3rem;
   color: #032119;
+  cursor: pointer;
+}
+
+.header__title:hover ~ .header__logo {
+  background-image: url("../assets/icons/svg/023-ninja-4.svg");
 }
 
 .footer {
