--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -8,8 +8,8 @@
 
 html {
     font-size: 62.5%; // 1rem = 10px; 10px/16px = 62.5%
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    min-width: 100%;
 }
 
 body {
@@ -25,7 +25,6 @@ body {
 }
 
 .app {
-    width: 100vw;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -35,14 +34,26 @@ body {
 
 .background__dojo {
     position: absolute;
-    width: 80vw;
-    height: 80vh;
+    width: 80rem;
+    height: 80rem;
     bottom: 2.8rem;
     left: 50%;
+    bottom: 2.6rem;
     transform: translateX(-50%);
+    z-index: 1;
 }
 
 main {
-    height: 89%;
+    height: 90%;
     display: flex;
+    overflow-x: scroll;
+    z-index: 3;
+
+    &::-webkit-scrollbar {
+        background: rgba($color-black, 0.3);
+        height: 1.2rem;
+    }
+    &::-webkit-scrollbar-thumb:horizontal {
+        background: rgba($color-black, 0.5);
+    }
 }
