--- a/src/css/layout/_footer.scss
+++ b/src/css/layout/_footer.scss
@@ -6,6 +6,7 @@
     align-items: center;
     color: $color-white;
     padding: 0 5rem;
+    z-index: 10;
 
     &__attribution-box {
         color: $color-grey-3;
