--- a/src/css/components/_item-wrapper.scss
+++ b/src/css/components/_item-wrapper.scss
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     background-color: rgba($color-black, 0.2);
-    overflow-y: scroll;
+    overflow-y: auto;
     max-height: 55rem;
 
     &::-webkit-scrollbar {
