--- a/src/css/style.css
+++ b/src/css/style.css
@@ -127,14 +127,12 @@ body {
 
 .background__dojo {
   position: absolute;
-  width: 80rem;
-  height: 80rem;
-  bottom: 2.8rem;
+  width: 80%;
+  height: 80%;
   left: 50%;
   bottom: 2.6rem;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  z-index: 1;
 }
 
 main {
@@ -1013,14 +1011,20 @@ main::-webkit-scrollbar-thumb:horizontal {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-top: 15rem;
   z-index: 3;
+  overflow-y: auto;
 }
 
 .landing__box {
-  width: 38%;
+  width: 50%;
+  padding-left: 5rem;
   color: #fff;
   text-align: center;
 }
@@ -1072,7 +1076,80 @@ main::-webkit-scrollbar-thumb:horizontal {
 }
 
 .landing__image {
-  height: 90%;
+  max-height: 80%;
+  width: 90%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.landing__image-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 50%;
+  max-height: 85%;
+}
+
+@media (max-width: 94.4em) {
+  .landing__title {
+    font-size: 4.2rem;
+    margin-top: 4.5rem;
+  }
+  .landing__subtitle {
+    font-size: 2.3rem;
+    margin-top: 2.8rem;
+  }
+  .landing__text {
+    font-size: 1.3rem;
+    margin-top: 2.8rem;
+    line-height: 2.3rem;
+  }
+  .landing__text span {
+    font-size: 2rem;
+  }
+  .landing__btn {
+    margin-top: 4.5rem;
+    height: 7rem;
+    width: 13rem;
+    font-size: 1.3rem;
+  }
+  .landing__btn-svg {
+    width: 3.2rem;
+    margin: 1rem;
+  }
+  .landing__image {
+    max-height: 80%;
+  }
+}
+
+@media (max-width: 73.45em) {
+  .landing {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    overflow-y: auto;
+    padding: 10rem 0;
+  }
+  .landing__box {
+    width: 70%;
+    padding-left: 0;
+  }
+  .landing__image {
+    -webkit-box-sizing: content-box;
+            box-sizing: content-box;
+    display: inline-block;
+    margin-top: 5rem;
+  }
+  .landing__image-container {
+    width: 70%;
+  }
 }
 
 .board__add {
@@ -1119,8 +1196,8 @@ main::-webkit-scrollbar-thumb:horizontal {
 
 .header {
   height: 5rem;
+  line-height: 5rem;
   background-color: rgba(74, 84, 77, 0.8);
-  padding: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1158,6 +1235,9 @@ main::-webkit-scrollbar-thumb:horizontal {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   cursor: pointer;
 }
 
@@ -1176,6 +1256,77 @@ main::-webkit-scrollbar-thumb:horizontal {
   color: #cccccc;
 }
 
+@media (max-width: 73.45em) {
+  .header__logo {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
+  .header__logo-box {
+    padding: 0;
+  }
+  .header__board {
+    width: 4rem;
+    height: 4rem;
+  }
+  .header__title {
+    margin: 0 3rem;
+    font-size: 2.4rem;
+  }
+}
+
+@media (max-width: 49em) {
+  .header {
+    height: 4rem;
+    line-height: 4rem;
+  }
+  .header__logo {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
+  .header__board {
+    width: 4rem;
+    height: 4rem;
+  }
+  .header__title {
+    margin: 0 2rem;
+    font-size: 1.8rem;
+  }
+}
+
+@media (max-width: 34.37em) {
+  .header {
+    height: 3rem;
+    line-height: 3rem;
+  }
+  .header__logo {
+    width: 2rem;
+    height: 2rem;
+  }
+  .header__board {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+  .header__title {
+    margin: 0 1rem;
+    font-size: 1.4rem;
+  }
+}
+
+@media (max-width: 26.56em) {
+  .header__logo {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .header__board {
+    width: 2rem;
+    height: 2rem;
+  }
+  .header__title {
+    margin: 0 .5rem;
+    font-size: 1.2rem;
+  }
+}
+
 .footer {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1190,7 +1341,7 @@ main::-webkit-scrollbar-thumb:horizontal {
           align-items: center;
   color: #fff;
   padding: 0 5rem;
-  z-index: 10;
+  z-index: 2;
 }
 
 .footer__attribution-box {
@@ -1218,3 +1369,36 @@ main::-webkit-scrollbar-thumb:horizontal {
 .footer__dev-link:hover {
   color: #3e752d;
 }
+
+@media (max-width: 49em) {
+  .footer {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer__attribution-box {
+    display: none;
+  }
+}
+
+@media (max-width: 34.37em) {
+  .footer__dev--developed {
+    font-size: 1.1rem;
+  }
+  .footer__dev-link {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 26.56em) {
+  .footer {
+    padding: 0;
+  }
+  .footer__dev--developed {
+    font-size: 0.8rem;
+  }
+  .footer__dev-link {
+    font-size: 0.5rem;
+  }
+}
+/*# sourceMappingURL=style.css.map */
