--- a/src/css/components/_landing.scss
+++ b/src/css/components/_landing.scss
@@ -2,12 +2,15 @@
     background: rgba($color-green-3, 0.8);
     height: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    align-items: center;
     padding-top: 15rem;
     z-index: 3;
+    overflow-y: auto;
 
     &__box {
-        width: 38%;
+        width: 50%;
+        padding-left: 5rem;
         color: $color-white;
         text-align: center;
     }
@@ -48,6 +51,64 @@
         }
     }
     &__image {
-        height: 90%;
+        max-height: 80%;
+        width: 90%;
+        object-fit: contain;
+        &-container {
+            display: flex;
+            justify-content: center;
+            width: 50%;
+            max-height: 85%;
+        }
+    }
+    @include mq-manager(desk) {
+        &__title {
+            font-size: resize($default-font-size, 4.2);
+            margin-top: 4.5rem;
+        }
+        &__subtitle {
+            font-size: resize($default-font-size, 2.3);
+            margin-top: 2.8rem;
+        }
+        &__text {
+            font-size: resize($default-font-size, 1.3);
+            margin-top: 2.8rem;
+            line-height: 2.3rem;
+
+            & span {
+                font-size: resize($default-font-size, 2);
+            }
+        }
+            &__btn {
+            margin-top: 4.5rem;
+            height: 7rem;
+            width: 13rem;
+            font-size: resize($default-font-size, 1.3);
+            &-svg {
+                width: 3.2rem;
+                margin: $size-xsmall;
+            }
+        }
+        &__image {
+            max-height: 80%;
+        }
+    }
+    @include mq-manager(tab-land) {
+        flex-direction: column-reverse;
+        align-items: center;
+        overflow-y: auto;
+        padding: 10rem 0;
+        &__box {
+            width: 70%;
+            padding-left: 0;
+        }
+        &__image {
+            box-sizing: content-box;
+            display: inline-block;
+            margin-top: 5rem;
+            &-container {
+                width: 70%;
+            }
+        }
     }
 }
